# panasonic-matter-ac-cli

./: .gitignore  LICENSE  README.md  ac.py  main.py  pyproject.toml
panasonic_ac/: cli.py  core.py
