[project]
name = "panasonic-ac"
version = "0.1.0"
description = "Panasonic Matter AC Control Wrapper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.24.1",
    "hatchling>=1.25.0",
]

[project.scripts]
panasonic-ac = "ac:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ac.py"]
